@@ -100,6 +100,9 @@ Release 2.7.0 - 2015-04-20
 
   BUG FIXES
 
+    MAPREDUCE-6339. Job history file is not flushed correctly because isTimerActive
+    flag is not set true when flushTimerTask is scheduled. (zhihai xu via devaraj)
+
     MAPREDUCE-6210. Use getApplicationAttemptId() instead of getApplicationId()
     for logging AttemptId in RMContainerAllocator.java (Leitao Guo via aajisaka)
 
